# relation-word-api

./: .env.example  .env.prod.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: analogy.py  cascade.py  health.py  related.py  similarity.py
app/core/: auth.py  config.py  logging.py  middleware.py  rate_limit.py
app/schemas/: related.py
app/services/: ann.py  cache.py  embedding.py  filters.py  language.py  similarity.py  stopwords.py  tokenizer.py
deploy/: README.md  cloud-init.yaml  ec2.sh  relation-word-api.service  word-api.service
docs/: CLIENTS.md
scripts/: build_ann_index.py  manage-api-keys.sh
tests/: conftest.py  test_api.py  test_cascade.py
web/: .env.local.example  README.md
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/related/: route.ts
web/components/: explorer.tsx  history.tsx  options-panel.tsx  result-cards.tsx  search-bar.tsx
web/lib/: client-api.ts  relation-word-api.ts  word-api.ts
