[project]
name = "word-api"
version = "0.1.0"
description = "Related-words API backed by word embeddings (chiVe / fastText)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "gensim>=4.3.2",
    "numpy>=1.26,<2.0",
    "sudachipy>=0.6.8",
    "sudachidict-core>=20240409",
    "slowapi>=0.1.9",
    "redis>=5.0",
    "cachetools>=5.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "hnswlib>=0.8",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
